--- a/VINS-mono/config/dvs/dvs_config.yaml
+++ b/VINS-mono/config/dvs/dvs_config.yaml
@@ -3,6 +3,7 @@
 #common parameters
 imu_topic: "/imu0"
 image_topic: "/cam0/image_raw"
+event_topic: "/dvs/events"
 # output_path: "/home/shaozu/output/"
 
 #camera calibration 
@@ -20,7 +21,6 @@ projection_parameters:
    fy: 198.82882047
    cx: 132.192071378
    cy: 110.712660011
-
 # Extrinsic parameter between IMU and Camera.
 estimate_extrinsic: 0   # 0  Have an accurate extrinsic parameters. We will trust the following imu^R_cam, imu^T_cam, don't change it.
                         # 1  Have an initial guess about extrinsic parameters. We will optimize around your initial guess.
@@ -31,15 +31,15 @@ extrinsicRotation: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [0.0148655429818, -0.999880929698, 0.00414029679422,
-           0.999557249008, 0.0149672133247, 0.025715529948, 
-           -0.0257744366974, 0.00375618835797, 0.999660727178]
+   data: [0.9999, -0.0122, 0.0063,
+           0.0121, 0.9998, 0.0093, 
+           -0.0064, -0.0092, 0.9999]
 #Translation from camera frame to imu frame, imu^T_cam
 extrinsicTranslation: !!opencv-matrix
    rows: 3
    cols: 1
    dt: d
-   data: [-0.0216401454975,-0.064676986768, 0.00981073058949]
+   data: [0.0067,0.0007, 0.0342]
 
 #feature traker paprameters
 max_cnt: 150            # max feature number in feature tracking
