--- a/VINS-mono/config/dvs/dvs_config.yaml
+++ b/VINS-mono/config/dvs/dvs_config.yaml
@@ -2,7 +2,8 @@
 
 #common parameters
 imu_topic: "/imu0"
-image_topic: "/cam0/image_raw"
+# image_topic: "/cam0/image_raw"
+image_topic: "/feature_tracker/event_img"
 event_topic: "/dvs/events"
 # output_path: "/home/shaozu/output/"
 
